--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,8 @@
-name: -basic-environment
+name: basic-environment
 channels:
   - conda-forge
 dependencies:
+  - python=3.6
   - numpy
   - rpy2
   - matplotlib
